--- a/build.gradle
+++ b/build.gradle
@@ -48,4 +48,7 @@ dependencies {
     implementation "org.postgresql:postgresql:42.2.18"
     implementation "com.zaxxer:HikariCP:$hikari_version"
 
+    //simple email
+    implementation("org.apache.commons:commons-email:1.5")
+
 }
